# mixpanel-cli

./: .coverage  .gitignore  CLAUDE.md  PRD.md  README.md  SKILL.md  TODO.md  pyproject.toml
.omc/: prd.json  progress.txt  project-memory.json
.omc/state/: agent-replay-8cb766a1-688f-4efe-91ac-69d86c150471.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  skill-sessions.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-25T16-00-33-100Z.json
docs/: mcp-dashboard-skill.md  mcp-vs-cli.md
mixpanel_cli/: cache.py  constants.py  exceptions.py  main.py  models.py  types.py
mixpanel_cli/auth/: keychain.py  oauth.py  profile.py
mixpanel_cli/client/: base.py  claude.py  mixpanel.py
mixpanel_cli/commands/: _utils.py  analytics.py  ask.py  auth.py  config.py  dashboard.py  events.py  export.py  lexicon.py  project.py  shell.py  watch.py
mixpanel_cli/output/: formatter.py
tests/: conftest.py
tests/e2e/: test_edge_cases.py  test_scenarios.py
tests/fixtures/: ask_golden_set.json
tests/unit/: test_analytics.py  test_ask.py  test_auth.py  test_auth_oauth.py  test_claude_client.py  test_config.py  test_dashboard.py  test_events.py  test_exceptions.py  test_export.py  test_formatter.py  test_lexicon.py  test_models.py  test_project.py  test_shell.py  test_types.py  test_watch.py
