[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixpanel-cli"
version = "0.1.0"
description = "Agent-native Mixpanel CLI — JSON output, REPL mode, AI-powered analytics"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "keyring>=25.0",
  "rich>=13.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
ai    = ["anthropic>=0.25"]
shell = ["prompt-toolkit>=3.0"]
all   = ["mixpanel-cli[ai,shell]"]
dev   = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "pytest-mock>=3.0",
  "hatchling",
]

[project.scripts]
mixpanel = "mixpanel_cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = ["golden: ask golden set accuracy tests"]

[tool.coverage.run]
source = ["mixpanel_cli"]
omit = ["tests/*"]
